2004-07-25  Werner Lemberg  <wl@gnu.org>

	Rename @s to @slanted.

	* doc/texinfo.tex (\s): Replace with...
	(\slanted): This.
	* doc/texinfo.txi: Updated.

	* makeinfo/cmds.c (command_table): Add @slanted, not @s.
	(cm_s): Replace with...
	(cm_slanted): This.
	* makeinfo/cmds.h: Add cm_slanted, not cm_s..

	* NEWS: Updated.

2004-07-24  Karl Berry  <karl@gnu.org>

	* info/echo-area.c (ea_possible_completions),
	* info/session.c (forward_move_node_structure),
	* info/infokey.c (compile): cast to intptr_t to avoid cast to
		pointer from integer of different size.
	From Havard Eidnes <he@netbsd.org>, 14 Jul 2004 20:38:59 +0200.

2004-07-19  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (main): with XML, instead of directly calling
	handle_variable_internal for -D and -U command line flags, hold the
	variable declarations until output document is started.
	(convert_from_loaded_file): handle variables provided with -D and -U
	flags here, just before entering the reader_loop.
	(Otherwise, -D/-U with --xml cause a segfault.)

2004-07-15  Werner Lemberg  <wl@gnu.org>

	* doc/texinfo.tex (\s): New command to typeset text with a slanted
		font.
	* doc/texinfo.txi: Document @s.

	* makeinfo/cmds.c (command_table): Add @s.
	(cm_s): New function.  Currently the same as cm_i -- it probably
		has to be adapted to Docbook and XML.
	* makeinfo/cmds.h: Add prototype for cm_s.

	* NEWS: Document new command @s.

2004-07-15  Werner Lemberg  <wl@gnu.org>

	* doc/texinfo.tex (\TeX): Adjust \spacefactor to make it act like a
		lowercase letter, not like a period.

2004-07-12  Karl Berry  <karl@gnu.org>

	* texinfo/texinfo.txi (Useful Highlighting): Include
		cross-references to each of the commands.  Suggestion from
		Wolfgang Pausch, 12 Jul 2004 08:26:28 +0200.

	* texinfo/texinfo.txi (Invoking makeinfo),
	* makeinfo/makeinfo.c: mention that --if-noFORMAT also processes
	@ifnotFORMAT blocks.
	Suggestion from Stepan.

2004-07-11  Karl Berry  <karl@gnu.org>
